# AdventOfCode

./: .gitignore  README.md  new_day.sh  run.sh
2015/: Cargo.toml  new_day.sh  new_day_py.sh  new_day_rs.sh  run.sh
2015/src/: util.rs
2015/src/day01/: main.rs
2015/src/day02/: main.rs
2015/src/day03/: main.rs
2015/src/day04/: main.rs
2015/src/day05/: main.rs
2015/src/day06/: main.rs
2015/src/day07/: main.py
2015/src/day08/: main.py
2015/src/day09/: main.py
2015/src/day10/: main.py
2015/src/day11/: main.py
2015/src/day12/: main.py
2015/src/day13/: main.py
2015/src/day14/: main.py
2015/src/day15/: main.py
2015/src/day16/: main.py
2015/src/day17/: main.py
2015/src/day18/: main.py
2015/src/day19/: main.py
2015/src/day20/: main.py
2015/src/day21/: main.py
2015/src/day22/: main.py
2015/src/day23/: main.py
2015/src/day24/: main.py
2015/src/day25/: main.py
2016/: new_day.sh
2016/src/day01/: main.py
2016/src/day02/: main.py
2016/src/day03/: main.py
2016/src/day04/: main.py
2016/src/day05/: main.py
2016/src/day06/: main.py
2016/src/day07/: main.py
2016/src/day08/: main.py
2016/src/day09/: main.py
2016/src/day10/: main.py
2016/src/day11/: main.py
2016/src/day12/: .main.py.swo  main.py
2016/src/day13/: main.py
2016/src/day14/: main.py
2016/src/day15/: main.py
2016/src/day16/: main.py
2016/src/day17/: main.py
2016/src/day18/: main.py
2016/src/day19/: main.py
2016/src/day20/: main.py
2016/src/day21/: main.py
2016/src/day22/: main.py
2016/src/day23/: main.py
2016/src/day24/: main.py
2017/: new_day.sh
2017/01/: AoC  AoC.cpp  AoC.py  AoC2  AoC2.cpp  AoC2.py
2017/02/: AoC  AoC.cpp  AoC.py  AoC2.cpp  AoC2.py
2017/03/: AoC3_2.py
2017/04/: AoC4_1.py  AoC4_2.py
2017/05/: AoC5_1.py  AoC5_2.py
2017/06/: AoC6_1.py  AoC6_2.py
2017/07/: AoC7_1.py  AoC7_2.py
2017/08/: AoC8_1.py  AoC8_2.py
2017/09/: AoC9_1.py
2017/10/: AoC10_1.py  AoC10_2.py
2017/11/: AoC11_1.py
2017/12/: one.py
2017/13/: AoC.py
2017/14/: AoC.py  AoC2.py
2017/15/: AoC  AoC.cpp  AoC.py
2017/16/: AoC.py
2017/17/: AoC  AoC.cpp  AoC.py
2017/18/: AoC.py  AoC2.py
2017/19/: AoC.py
2017/20/: AoC.py  AoC2.py
2017/21/: AoC.py
2017/22/: AoC.py  AoC2.py
2017/23/: AoC.py  AoC2.py  test.py
2017/24/: AoC.py
2017/25/: AoC.py
2018/: new_day.sh
2018/01/: first  first.cpp  second  second.cpp
2018/02/: first  first.cpp  second  second.cpp
2018/03/: first  first.cpp  output.txt  second  second.cpp
2018/04/: first  first.cpp  second  second.cpp
2018/05/: first  first.cpp  second  second.cpp
2018/06/: first  first.cpp  second  second.cpp
2018/07/: first  first.cpp  second  second.cpp
2018/08/: first  first.cpp  second  second.cpp
2018/09/: first  first.cpp
2018/10/: first  first.cpp  output.txt
2018/11/: first  first.cpp  second  second.cpp  second2  second2.cpp  second3  second3.cpp
2018/12/: first  first.cpp  output.txt
2018/13/: first  first.cpp  second  second.cpp
2018/14/: first  first.cpp  second  second.cpp  second.py
2018/15/: first  first.cpp  input13.txt  second  second.cpp
2018/16/: first  first.cpp  input1.txt  input2.txt  meanings.cpp  second  second.cpp
2018/17/: first  first.cpp  input2.txt  input3.txt  input5.txt  input6.txt  output.txt
2018/18/: first  first.cpp  second  second.cpp
2018/19/: first  first.cpp  second  second.cpp
2018/20/: first  first.cpp  input4.txt  input5.txt  second  second.cpp
2018/21/: first  first.cpp  input1.txt  second  second.cpp
2018/22/: first  first.cpp  input.txt  second  second.cpp
2018/23/: first  first.cpp  input.txt  second  second.cpp  second.py
2018/24/: first  first.cpp  second  second.cpp  second2  second2.cpp
2018/25/: first  first.cpp
2019/: AoC2019.cabal
2019/01/: sol  sol.hi  sol.hs  sol.py  utility.hi
2019/02/: sol  sol.hi  sol.hs  sol.py  utility.hi  utility.hs
2019/03/: sol.hs  sol.py  utility.hi
2019/04/: sol.hs
2019/05/: sol.hs  sol.py
2019/06/: sol.py
2019/07/: sol.py
2019/08/: sol.py
2019/09/: sol.py
2019/10/: sol.py
2019/11/: sol.py
2019/12/: sol.cpp  sol.py
2019/13/: sol.py
2019/14/: sol.hs  sol.py
2019/15/: sol.py
2019/16/: sol.py
2019/17/: board.txt  sol.py  utility.hs
2019/18/: sol.py
2019/19/: sol.py
2019/20/: sol.py
2019/21/: sol.py
2019/22/: sol.py
2019/23/: sol.py
2019/24/: sol.py
2019/25/: sol.hs  sol.py
2019/src/day01/: main.py
2019/src/day02/: main.py
2019/src/day03/: main.py
2019/src/day04/: main.py
2019/src/day06/: main.py
2019/src/day08/: main.py
2019/util/: intcode.py
2020/: util.cpp  util.h
2020/01/: sol.cpp
2020/02/: sol.cpp
2020/03/: sol.cpp
2020/04/: sol.cpp
2020/05/: sol.cpp
2020/06/: sol.cpp
2020/07/: sol.cpp
2020/08/: sol.cpp
2020/09/: sol.cpp
2020/10/: sol.cpp
2020/11/: sol.cpp
2020/12/: sol.cpp
2020/13/: sol.cpp
2020/14/: sol.cpp
2020/15/: sol.cpp
2020/16/: sol.cpp
2020/17/: sol.cpp
2020/18/: sol.cpp
2020/19/: sol.cpp
2020/20/: sol.cpp
2020/21/: sol.cpp
2020/22/: sol.cpp
2020/23/: sol.cpp
2020/24/: sol.cpp
2020/25/: sol.cpp
2021/: cpp_new.sh  cpp_run.sh  new_day.sh
2021/cpp/: utils.h
2022/: new_day.sh  run.sh
2022/day02/: sol.hs
2022/day03/: sol.hs
2023/: README.md  sol12.py  sol20.py  test.html
2023/aoc2023/: aoc2023.cabal  package.yaml
2023/day01/: day01.hs
2024/day01/: sol.dyalog
2024/day02/: sol.dyalog
2024/day03/: sol.cpp  sol.dyalog
2024/day04/: sol.dyalog
2024/day05/: sol.dyalog
2024/day06/: sol.cpp
2024/day07/: sol.cpp  sol.dyalog
2024/day08/: sol.cpp
2024/day09/: '  sol.cpp
2024/day10/: sol.cpp
2024/day11/: sol.cpp
2024/day12/: sol.cpp
2024/day13/: sol.cpp
2024/day14/: sol.cpp
2024/day15/: sol.cpp
2024/day16/: sol.cpp
2024/day17/: sol.cpp  sol.py
2024/day18/: sol.cpp
2024/day19/: sol.cpp
2024/day20/: sol.cpp
2024/day21/: sol.cpp
2024/day22/: sol.cpp
2024/day23/: sol.cpp
2024/day24/: sol.cpp
2024/day25/: sol.cpp
cpputils/: util.h
pyutils/: __init__.py  circular_list.py
(+136 files in other folders)
