cabal-version: >=1.10
name: AoC2019
version: 0.1.0.0
maintainer: mateusz.parafinski@gmail.com
author: Lammatian
build-type: Simple
extra-source-files:
    CHANGELOG.md

library
    exposed-modules:
        Utility
    hs-source-dirs: Common
    default-language: Haskell2010
    build-depends:
        base -any

executable day1
    main-is: sol.hs
    hs-source-dirs: 01 Common
    other-modules:
        Utility
    default-language: Haskell2010
    build-depends:
        base -any

executable day2
    main-is: sol.hs
    hs-source-dirs: 02 Common
    other-modules:
        Utility
    default-language: Haskell2010
    build-depends:
        base -any,
        containers >= 0.5.8

executable day3
    main-is: sol.hs
    hs-source-dirs: 03 Common
    other-modules:
        Utility
    default-language: Haskell2010
    build-depends:
        base -any

executable day4
    main-is: sol.hs
    hs-source-dirs: 04 Common
    other-modules:
        Utility
    default-language: Haskell2010
    build-depends:
        base -any

executable day5
    main-is: sol.hs
    hs-source-dirs: 05 Common
    other-modules:
        Utility
    default-language: Haskell2010
    build-depends:
        base -any,
        containers >= 0.5.8
